# getsb-cli

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: request.json
src/: errors.rs  main.rs  parser.rs  sender.rs
tests/: basic.bats  errors.bats
